--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.4"
   }
 }
