--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.4"
   }
