--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "mongoose": "^6.2.4"
+    "mongoose": "^6.2.4",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   }
 }
